[project]
name = "hls-stac-parquet"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "hrodmn", email = "henry.rodman@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "duckdb>=1.3.0",
    "httpx>=0.28.1",
    "obstore>=0.6.0",
    "pystac>=1.13.0",
    "python-cmr>=0.13.0",
    "rustac>=0.8.0",
    "smart-open>=7.1.0",
    "tqdm>=4.67.1",
]

[project.scripts]
hls-stac-parquet = "hls_stac_parquet.cli:cli_main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pytest>=8.3.5",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=6.0.0",
    "ruff>=0.11.11",
]

# Pytest configuration
[tool.pytest.ini_options]
addopts = [
    "-ra",
    "--strict-markers",
    "--strict-config",
]
testpaths = ["tests"]
filterwarnings = [
    "ignore::UserWarning",
    "ignore::DeprecationWarning",
]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
