[project]
name = "hls-stac-parquet"
version = "0.2.0"
description = "Generate a STAC GeoParquet archive from the HLS STAC records"
readme = "README.md"
authors = [
    { name = "hrodmn", email = "henry@developmentseed.org" }
]
requires-python = ">=3.12"
dependencies = [
    "aiohttp>=3.13.2",
    "aiohttp-retry>=2.9.1",
    "duckdb>=1.3.0",
    "gql[httpx]>=3.5.3",
    "hilbertcurve>=2.0.5",
    "httpx>=0.28.1",
    "mgrs>=1.5.0",
    "obstore>=0.8.2",
    "pystac>=1.13.0",
    "pytest-recording>=0.13.4",
    "python-cmr>=0.13.0",
    "rustac>=0.8.3",
    "smart-open>=7.1.0",
    "tqdm>=4.67.1",
    "typer>=0.20.0",
]

[project.scripts]
hls-stac-parquet = "hls_stac_parquet.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "boto3>=1.40.73",
    "ipython>=9.7.0",
    "pre-commit>=4.4.0",
    "pytest>=8.3.5",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=6.0.0",
    "ruff>=0.11.11",
]

# Pytest configuration
[tool.pytest.ini_options]
addopts = [
    "-ra",
    "--strict-markers",
    "--strict-config",
    "--record-mode", "new_episodes",
    "-vv",
]
testpaths = ["tests"]
markers = "vcr: records network activity"
filterwarnings = [
    "ignore::UserWarning",
    "ignore::DeprecationWarning",
]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
